fix final static order and fix fxml editor extension